@@ -1,3 +1,26 @@
+/*
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2022-2030 The XdagJ Developers
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ */
 package io.xdag.p2p.discover.kad.table;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -43,7 +66,7 @@ public class NodeBucketTest {
     NodeEntry entry1 = createUniqueNodeEntry();
     assertNull(bucket.addNode(entry1));
     assertEquals(1, bucket.getNodesCount());
-    assertEquals(entry1, bucket.getNodes().get(0));
+    assertEquals(entry1, bucket.getNodes().getFirst());
   }
 
   @Test
@@ -86,7 +109,7 @@ public class NodeBucketTest {
 
     bucket.dropNode(entry1);
     assertEquals(1, bucket.getNodesCount());
-    assertEquals(entry2, bucket.getNodes().get(0));
+    assertEquals(entry2, bucket.getNodes().getFirst());
 
     // Dropping non-existent node should not affect bucket
     bucket.dropNode(entry1);
